--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
         <div class="main-content">
         {{>header}}
         <h2>{{title}}</h2>
+        <p> This site is created for learning javascript. It uses data from <a href="https://www.mapbox.com/"> mapbox</a> and <a href="https://darksky.net">darksky</a></p>
         <img class="portrait" src='/img/trump-uncle.jpg'>
         <p>Created by: {{name}} </p>
         </div>
