New information added. Temperature range in the day  and current windspeed are included in the results

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,6 +15,7 @@
                 <button>Search</button>
                 <p id='message1'></p>
                 <p id='message2'></p>
+                <p id='message3'></p>
             </form>
         </div>
        {{>footer}}
