--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,6 +13,7 @@
             <form>
                 <input placeholder="Location">
                 <button>Search</button>
+                <button id='current-Location'>My Location</button>
                 <p id='message1'></p>
                 <p id='message2'></p>
                 <p id='message3'></p>
